# algorithm-vault

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CODEX_APP_SUMMARY.md  DEPLOYMENT.md  EFFICIENCY_WEAK_POINTS.md  README.md  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements-exchanges.txt  requirements-full.txt  requirements-ml.txt  requirements-torch.txt  requirements-wallets.txt  requirements.txt  run.py  server.py  vercel.json  wsgi.py
admin-pwa/: .gitignore  next.config.ts  package-lock.json  package.json
app/: __init__.py  admin_auth.py  auth.py  cli.py  config.py  csrf.py  extensions.py  live_api_internal.py  models.py  runtime.py  settings_validation.py  utils.py
deploy/: env.live-api.example  env.production.example  env.render-worker.example  env.vercel.example  gunicorn.conf.py
docs/: codex-cloud-readiness.md  invite-code-profit-share-admin-pwa.md  one-h10-validation.md
migrations/: README.md
scripts/: apply_ios_audit.py  check_local_setup.sh  create_local_https_cert.sh  deploy_vercel_production.sh  discover_wallet_buy_treasury_sources.py  healthcheck.sh  import_account_to_postgres.py  live_api_smoke.py  prepare_vercel_static.sh  production_bootstrap.sh  restart_production.sh  run_local_dev.sh  run_local_https.sh  run_local_production.sh  stop_local_production.sh  verify_wallet_buy_production.py
static/: manifest.json  manifest.webmanifest
templates/: activity.html  base.html  connections.html  convert.html  cycle_detail.html  dashboard.html  deposit.html  home.html  orders.html  panic.html  settings.html  trading_ops.html  vault.html  wallet.html  withdraw.html
tests/: conftest.py  (+51 more)
(+173 files in other folders)
