[project]
name = "algorithm-vault"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.3",
    "Flask-Migrate>=4,<5",
    "Flask-SQLAlchemy==3.1.1",
    "SQLAlchemy==2.0.49",
    "cryptography==47.0.0",
    "eth-account==0.13.7",
    "gunicorn>=23,<24",
    "hyperliquid-python-sdk==0.23.0",
    "psycopg[binary]>=3.2,<4",
    "pyotp==2.9.0",
    "python-dotenv==1.2.2",
    "qrcode==8.2",
    "requests==2.33.1",
    "websocket-client==1.9.0",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/cli_commands/legacy.py",
    "app/routes/consumer_parts/legacy.py",
    "app/services/*_parts/legacy.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 140
extend-exclude = [
    ".venv",
    ".venv.broken-*",
    "migrations/versions",
    "app/cli_commands/legacy.py",
    "app/routes/consumer_parts/legacy.py",
    "app/services/*_parts/legacy.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
follow_imports = "skip"
files = [
    "app/settings_validation.py",
    "app/services/audit_events.py",
    "app/services/failures.py",
    "app/services/response_envelope.py",
    "app/services/vault_cycle_orchestrator.py",
    "app/services/worker_lease.py",
    "app/services/model_registry.py",
    "app/workers/runner.py",
]
